# STS1_BATTERY_TEST_SETUP

./: .gitignore  .gitmodules  BatteryTesterBlockDiagramm.graphml  text.txt
Electronics/: BatteryTester.kicad_prl  BatteryTester.kicad_sch
pcbs/hat/: BatteryTester.kicad_pcb  BatteryTester.kicad_prl  BatteryTester.kicad_pro  BatteryTester.kicad_sch  Custom.kicad_sym  board.kicad_sch  converters.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  test-battery.kicad_sch
pcbs/hat/CustomFootprints.pretty/: replication_courtyard.kicad_mod
sims/: README.md  discharge.asc  discharge.net  mosfetDcSweep.asc
software/: Cargo.toml  README.md
software/.cargo/: config.toml
software/board/: Cargo.toml
software/board/src/: interfaces.rs  main.rs  panic_handler.rs
software/client/: Cargo.toml
software/client/src/: input_parser.rs  main.rs  serial_manager.rs  ui.rs
software/client/tests/: test.rs
software/firmware/: Cargo.toml  README.md
software/firmware/.cargo/: config.toml
software/firmware/src/: lib.rs  mocks.rs  msg_types.rs  test.rs  traits.rs
software/transmission/: Cargo.toml
software/transmission/src/: lib.rs  macros.rs  receive.rs  send.rs  test_messages.rs  tests.rs
