[package]
name = "board"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rtic = "1.0.0"
systick-monotonic = "1.0.0"
cortex-m = "0.7.6"
bbqueue = "0.5.1"
transmission = { path = "../transmission" }
firmware = { path = "../firmware" }
heapless = "0.7.16"
serde = { version = "1.0.147", default-features = false }
time = { version = "0.3.17", default-features = false }
embedded-hal = "0.2.7"

# [dependencies.rtt-target]
# version = "0.3.1"
# features = ["cortex-m"]

# [dependencies.panic-rtt-target]
# version = "0.1.2"
# features = ["cortex-m"]

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f411", "rt", "rtic-monotonic"]
