[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.2.0"
bbqueue = "0.5.1"
transmission = { path = "../transmission" }
heapless = "0.7.16"
serde = { version = "1.0.147", default-features = false } # without std dependency
tui = "0.19"
crossterm = "0.25"
unicode-width = "0.1.9"